--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Firebase Google Sign-In</string>
+    <string name="web_client_id">848628904419-qdfjorc3anbgp71pvgnu4jqjhotvpjge.apps.googleusercontent.com</string>
 </resources>
